// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with not svg source 1`] = `
<View
  style={
    Array [
      Object {
        "overflow": "hidden",
      },
      Object {
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <FastImageView
    resizeMode="cover"
    source={
      Object {
        "uri": "not svg",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`renders correctly with number source 1`] = `
<View
  style={
    Array [
      Object {
        "overflow": "hidden",
      },
      Object {
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <FastImageView
    resizeMode="cover"
    source={null}
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`renders correctly with svg source 1`] = `
<View
  style={
    Array [
      Object {
        "overflow": "hidden",
      },
      Object {
        "height": "100%",
        "width": "100%",
      },
    ]
  }
>
  <FastImageView
    resizeMode="cover"
    source={
      Object {
        "uri": ".svg",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;
